--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "php": ">=5.4",
     "composer/installers": "~1.0.12",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.2.2"
+    "johnpbloch/wordpress": "4.2.2",
+    "wpackagist-plugin/woocommerce": "2.3.11"
   },
   "extra": {
     "installer-paths": {
